--- a/Computer Hardware/EstudoDirigido-CH.Rmd
+++ b/Computer Hardware/EstudoDirigido-CH.Rmd
@@ -1,13 +1,11 @@
 ---
-title: "Análise de Dados - Aula 1"
-author: "Ítalo e José Antonio"
+title: "Estudo Dirigido - Computer Hardware"
+author: "Ítalo Gonçalves e José Antonio"
 date: "`r Sys.Date()`"
 output:
   pdf_document: default
   html_document: default
 ---
-
-##### Análise de Dados - Aula 1 #####
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
@@ -20,9 +18,8 @@ library(scales)
 library(ggplot2)
 ```
 
-### Questão 1 - ok
+## Sobre a base de dados <!-- Questão 1 -->
 
-**Descrição:**  
 O domínio do problema é a Ciência da Computação, focando no desempenho de hardware de computadores. O conhecimento esperado envolve dados de desempenho relativo da CPU, descritos em termos de tempo de ciclo, tamanho de memória, etc.
 
 ```{r}
@@ -32,9 +29,8 @@ colnames(computer_data) <- c("VendorName", "ModelName", "MYCT", "MMIN", "MMAX", 
 View(computer_data)
 ```
 
-### Questão 2 - ok
+## Dimensionalidade dos Dados <!-- Questão 2 -->
 
-**Descrição:**  
 Aqui, utilizamos as funções `dim()`, `nrow()` e `ncol()` temos o numero de amostra de 209 e o numero de variaveis de 10
 
 ```{r}
@@ -42,9 +38,8 @@ print(paste('Número de linhas(amostras):', nrow(computer_data)))
 print(paste('Número de colunas(variaveis):', ncol(computer_data)))
 ```
 
-### Questão 3 - ok
+## Análise Estrutural das Variáveis <!-- Questão 3 -->
 
-**Descrição:**  
 Utilizamos a função `str()` para exibir a estrutura do conjunto de dados.
 
 ```{r}
@@ -61,9 +56,8 @@ computer_data$ModelName <- as.factor(computer_data$ModelName)
 str(computer_data)
 ```
 
-### Questão 4 - ok
+## Integridade da base de dados <!-- Questão 4 -->
 
-**Descrição:**  
 Usado a função `summary()` temos resumo estatístico do dataframe, mas para garantir que nao exista valore NA, uma funcao de soma(sum) que vai contar a quantidade de valores NA no dataframe.
 
 ```{r}
@@ -77,12 +71,11 @@ quant_na <- sum(is.na(computer_data))
 print(paste("Quantidade de dados ausentes(NA):", quant_na))
 ```
 
-### Questão 5 - ok
+## Contagem de amostras <!-- Questão 5 -->
 
-**Descrição:**  
 Aqui, fiz uma contagem de amostra para cada classe, primeiro de VendorName e depos de ModelName
 
-#### VendorName
+### VendorName
 Nessa coluna/variavel foi possivel fazer a contagem de amostras sem grandes questoes e foi possivel demostrar as ammostras mais repetivas e seus valores.
 ```{r}
 # Contar amostras em cada classe
@@ -106,7 +99,7 @@ kable(df_porcentagem_VendorName, caption = "Porcentagem da Classe: Vendor_Name")
 
 ```
 
-#### ModelName
+### ModelName
 Nessa coluna/variavel o nome do medelo nao se repete oque, deixar essa analise de quantidades de valores iguais inutil, já que todos as amostras de campo vão ser unicas para cada resgitros, vou imprimir apenas alguns resgistro para dar de exeplo.
 ```{r}
 # Contar amostras em cada classe
@@ -122,9 +115,8 @@ colnames(df_porcentagem_ModelName) <- c("Amostra", "Contagem")
 kable(head(df_porcentagem_ModelName, 20), caption = "Porcentagem da Classe: Model_Name")
 ```
 
-### Questão 6
+## Balanceamento dos dados <!-- Questão 6 -->
 
-**Descrição:**  
 O balaceamento dos dados podem ser feitos na visao de vendores, assim pensando qual vendendor tem mais amostras e se as amostra entao baleacadas entre vendedores, entao vou pegar todos os vendedores e fazer alguns graficos apenas para deixa mais visual. Existe uma numero muito maior de amostras de vendores maiores.
 
 Pegar o numero de amostra de cada vendendor:
@@ -166,9 +158,8 @@ labels <- c(names(top_10), paste("Outros (", others_count, " classes)", sep=""))
 pie(top_10_with_others, main = "Top 10 Classes e Outros", col = rainbow(length(top_10_with_others)), labels = labels)
 ```
 
-### Questão 7
+## Problemas de Regressão <!-- Questão 7 -->
 
-**Descrição:**  
 Para calcular a média e o desvio padrão vou usar as funções mean() e sd(). Vou demosntrar para cada variavel:
 
 #### MYCT
@@ -253,14 +244,12 @@ print(paste("Média dos valores esperados (ERP):", round(media_ERP, 2)))
 print(paste("Desvio padrão dos valores esperados (ERP):", round(desvio_padrao_ERP, 2)))
 ```
 
-### Questão 8
+## Análise de Outliers <!-- Questão 8 -->
 
-**Descrição:**  
 Não encontrei nenhum outlier nos valores da variável ERP, significa que todos os dados estão dentro do intervalo esperado. A ausência de outliers significa que os dados estão bem distribuídos e não há valores extremos que possam distorcer a análise.
 
-### Questão 9
+## Análise Descritiva das Variáveis <!-- Questão 9 -->
 
-**Descrição:**  
 Vou usar min(), max(), mean(), e sd() para cada variável que é numérica. E colocar as informações em um formato de tabela para ficar mais fácil visualizar. Como temos variáveis categóricas e numéricas, vou focar nas variáveis numéricas para essa análise
 
 ```{r}
@@ -282,9 +271,8 @@ tabela_descritiva <- data.frame(
 print(tabela_descritiva)
 ```
 
-### Questão 10
+## Gráficos das Variáveis por Classe <!-- Questão 10 -->
 
-**Descrição:**  
 Vou fazer os seguintes graficos:
  - Um gráfico de dispersão (scatter plot) para variáveis numéricas, usando cores para mapear as classes.
  - Um grafico de boxplot para variáveis categóricas, novamente mapeando as classes por cores.
@@ -303,7 +291,7 @@ ggplot(computer_data, aes(x = VendorName, y = PRP, fill = VendorName)) +
   theme(axis.text.x = element_text(angle = 45, hjust = 1))  # Rotaciona os rótulos do eixo x
 ```
 
-### Questão 11
+## Análise de Correlação <!-- Questão 11 -->
 **Descrição:** 
 Para descobrir a correlação entre as variáveis numéricas e a classe dos dados, vou usar a função cor() para calcular a correlação de cada variável com a classe alvo, no meu caso PRP.
 ```{r}
@@ -318,21 +306,17 @@ print(correlacao_com_classe)
 A análise de correlação revelou que as variáveis MMIN e MMAX apresentam correlações fortes e positivas com o PRP, indicando que um aumento na memória mínima e máxima está associado a um desempenho relativo melhor. A variável CACH também mostrou uma correlação positiva moderada, sugerindo que mais memória cache contribui para um desempenho superior. Em contrapartida, a variável MYCT tem uma correlação negativa com o PRP, o que significa que um tempo de ciclo maior está relacionado a um desempenho inferior. As variáveis CHMIN e CHMAX também mostraram correlações positivas moderadas, sugerindo que mais canais podem melhorar o desempenho. Finalmente, a correlação extremamente forte entre ERP e PRP indica que o desempenho estimado e o publicado estão alinhados, reforçando a consistência das medições de desempenho.
 
 
-### Questão 12
+### Pré-processamento e Padrões Esperados <!-- Questão 12 e 13 --
 
-**Descrição:**  
 Com essa base de dados, é possível realizar modelagem preditiva para prever o desempenho relativo (PRP) das máquinas com base em suas características de hardware, além de análises exploratórias para entender as relações entre as variáveis. Também é viável identificar outliers e analisar tendências nas especificações de hardware ao longo do tempo.
 
 Antes de qualquer análise, é necessário realizar pré-processamentos, como a codificação de variáveis categóricas e a normalização das variáveis numéricas. Além disso, a identificação e o tratamento de outliers são importantes, assim como a divisão dos dados em conjuntos de treinamento e teste para validar modelos de aprendizado de máquina.
 
-### Questão 13
 
-**Descrição:**  
 Espera-se encontrar padrões que relacionam as características de hardware das máquinas com seu desempenho relativo (PRP). Isso pode incluir a identificação de quais variáveis, como memória mínima, memória máxima e cache, têm maior impacto no desempenho. Além disso, pode-se observar como o tempo de ciclo da máquina (MYCT) afeta negativamente o desempenho, revelando insights sobre a eficiência do hardware.
 
-### Questão 14
+## Estudos de artigos sobre a base de dados <!-- Questão 14 -->
 
-**Descrição:**  
 
 | Artigo                                                  | Estatística Descritiva Relatada                                         | Pré-processamento dos Dados                | Objetivo da Análise                                      |
 |--------------------------------------------------------|--------------------------------------------------------------------------|-------------------------------------------|----------------------------------------------------------|
@@ -347,12 +331,3 @@ Resumo das Conclusões
 Os estudos analisaram a base de dados em termos de como as variáveis impactam o desempenho do modelo de previsão. O primeiro artigo focou na aplicação de métodos de aprendizado que consideram amostras adicionais para enriquecer o processo de treinamento. O segundo estudo abordou a eficiência das redes neurais, buscando simplificar suas estruturas, mantendo a precisão nas previsões.
 
 Essas informações destacam a relevância da base de dados para a pesquisa em aprendizado de máquina e inteligência artificial, além de sugerir a importância de técnicas de pré-processamento na melhoria da performance dos modelos.
-
-### Questão 15
-
-**Descrição:**  
-Na análise da base de dados de Hardware de Computadores, foi possível observar padrões significativos nas variáveis relacionadas ao desempenho do CPU, como a correlação entre MMAX, MMIN e CACH com a performance relativa. Essa análise destaca a importância de variáveis técnicas na avaliação do desempenho e sugere que a otimização e o aperfeiçoamento dessas características podem levar a melhores desempenhos em futuros desenvolvimentos de hardware. Além disso, a ausência de outliers e a distribuição equilibrada dos dados em várias classes indicam que a base é adequada para aplicações de modelagem preditiva.
-
-Em relação às experiências pessoais, o trabalho foi desafiador principalmente na etapa de pré-processamento dos dados, onde garantir a qualidade e a relevância das variáveis demandou atenção. As partes que mais chamaram minha atenção foram as correlações encontradas, que revelaram insights sobre como diferentes aspectos do hardware impactam o desempenho geral. Meus conhecimentos prévios em R e análise de dados facilitaram a manipulação da base e a criação de visualizações significativas. A interação com os colegas foi enriquecedora, pois pudemos compartilhar dicas e abordar dúvidas juntos, tornando o processo de aprendizado mais colaborativo.
-
-Para ações futuras, recomenda-se explorar modelos de machine learning para prever o desempenho com base nas características disponíveis, além de investigar outras bases de dados que possam complementar essa análise.
