--- a/Computer Hardware/EstudoDirigido-CH.Rmd
+++ b/Computer Hardware/EstudoDirigido-CH.Rmd
@@ -7,7 +7,7 @@ output:
   html_document: default
 ---
 
-```{r setup, include=FALSE}
+```{r, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 library(knitr)
 # install.packages("dplyr")
